src/style/index.scss
* {
  box-sizing: border-box;
}

body {
  padding: 0;
  margin: 0;

  font-family: sans-serif;

  background-color: #1e1e1e;
  color: #eee;

  display: flex;
  justify-content: center;
  align-items: center;
}

@mixin mobile {
  @media (max-width: 800px) {
    @content;
  }
}

@mixin blockiness {
  box-shadow: 2px 2px 12px #0008;
  border-radius: 1rem;
  margin: 0.5rem;
}

.app-container {
  width: 100vw;
  min-height: 100vh;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: stretch;

  max-width: 1000px;

  padding: 1rem;
}

.config {
  padding: 2em;

  display: flex;
  flex-direction: column;

  @include blockiness();
}

.logo {
  &__container {
    background-color: #b29;
    padding: 0.3em 1em;

    @include blockiness();
  }

  &__header {
    font-weight: normal;
  }
}

.output {
  &__container {
    flex: 1 1 100px;
    overflow: auto;
    display: flex;
    flex-direction: column;

    @include blockiness();
  }

  &__output {
    margin: auto;
  }
}

.input {
  &__container {
    display: flex;
    justify-content: space-between;
    padding: 5px;
  }

  &__label {
    flex: 1;

    display: flex;
    align-items: center;
  }

  &__input {
    padding: 10px;
    border-radius: 10px;

    background-color: #eee;
    color: #000;

    flex: 1;
  }
}

